# overwitch

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README.md  THANKS  configure.ac
.github/workflows/: ubuntu.yml
docs/: Makefile  _config.yml  adding.md  configuration.md  index.md  installation.md  usage.md
docs/_includes/: header.html
po/: LINGUAS  POTFILES.in  ca.po  en.po  es.po  overwitch.pot
res/: Makefile.am  devices.json  gui.glade  io.github.dagargo.Overwitch.desktop  io.github.dagargo.OverwitchService.service.in  overwitch.cmb  overwitch.desktop  overwitch.ui
src/: Makefile.am  common.c  common.h  config.c  config.h  dll.c  dll.h  engine.c  engine.h  jclient.c  jclient.h  main-cli.c  main-dump.c  main-gui.c  main-play.c  main-record.c  main-service.c  main.c  message.c  message.h  overbridge.c  overbridge.h  overwitch.c  overwitch.h  overwitch_device.c  overwitch_device.h  preferences.c  preferences.h  resampler.c  resampler.h  utils.c  utils.h
systemd/: Makefile.am  overwitch.service
test/: Makefile.am  test_usb_blocks.c  tests.c
udev/: 20-usb-elektron.hwdb  91-usb-elektron.hwdb  91-usb-elektron.rules  Makefile.am
